--- a/src/components/base/cardSearch/cardSearch.scss
+++ b/src/components/base/cardSearch/cardSearch.scss
@@ -1,11 +1,10 @@
-@import '../../variables';
+@import '../../../variables';
 
 .list-cards {
   display: flex;
   align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
-  // justify-content: center;
 }
 
 .search-card {
