--- a/src/style.scss
+++ b/src/style.scss
@@ -36,6 +36,10 @@ body {
   grid-area: footer;
 }
 
+.clickable {
+  cursor: pointer;
+}
+
 .title {
   font-family: $font-poppins;
   font-size: 2.75rem;
