Presentation style moved.

--- a/src/components/pages/presentation.scss
+++ b/src/components/pages/presentation.scss
@@ -1,4 +1,4 @@
-@import '../../../variables';
+@import '../../variables';
 
 .presentation {
   height: 260px;
@@ -8,8 +8,9 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  // Default - Main Page
   &__bg {
-    background-image: url('../../../assets/vaso_corte.jpg');
+    background: url('../../assets/vaso_corte.jpg');
     background-position: center;
     background-repeat: no-repeat;
     opacity: .15;
@@ -17,12 +18,21 @@
     width: 100%;
     z-index: -1;
     position: absolute;
+    //Search -Page
+    &--search {
+      background-image: url('../../assets/canteiro_corte.jpg');
+    }
   }
   &__text {
 	  text-align: center;
     margin: 0 auto;
   }
+  // Main Page
   &__icon {
     @include separator('assets/icon4.svg');
+  };
+  // Search Page
+  &__icon2 {
+    @include separator('assets/icon9.svg');
   };
 }
