Renamed component card and responsiveness.

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -9,6 +9,7 @@ $font-input: $font-poppins;
 $font-light: 100;
 $font-regular: 400;
 $font-title: 3rem;
+$font-size-form: 1rem;
 
 // BASE COLORS
 $alabaster: #fafafc;
