--- a/src/components/base/cardResult/cardResult.scss
+++ b/src/components/base/cardResult/cardResult.scss
@@ -4,10 +4,9 @@
   display: flex;
   align-items: center;
   flex-direction: row;
-  flex-wrap: wrap;
 }
 
-.search-card {
+.card-result {
   background-color: #87a48755;
   cursor: pointer;
   box-sizing: border-box;
@@ -41,5 +40,30 @@
     font-weight: $font-weight-default;
     line-height: 1.5rem;
     overflow: hidden;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .list-cards {
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .card-result {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  .list-cards {
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .card-result {
+    width: calc(50% - 0.2rem);
+    &:not(:nth-child(3n + 1)) {
+      margin-left:0rem;
+    }
   }
 }
