--- a/src/components/base/header/header.scss
+++ b/src/components/base/header/header.scss
@@ -11,6 +11,17 @@
   filter: invert(28%) sepia(4%) saturate(2378%) hue-rotate(75deg) brightness(96%) contrast(94%);
 }
 
+@mixin setup-bullet-icon-mobile($url: '../../../assets/icon.svg') {
+  position: absolute;
+  background: url($url) no-repeat;
+  background-size: contain;
+  left: -1.5rem;
+  top: 1rem;
+  height: 1.5rem;
+  width: 1.5rem;
+  filter: invert(28%) sepia(4%) saturate(2378%) hue-rotate(75deg) brightness(96%) contrast(94%);
+}
+
 @mixin background-opacity($color, $opacity: 0.3) {
   background: $color;
   background: rgba($color, $opacity);
@@ -54,6 +65,31 @@
     padding: 0 0 0.1rem 0.1rem;
     &:hover {
       border-bottom: 1px solid $border-bright-color;
+    }
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .menu {
+    &__block {
+      flex-direction: column;
+      align-items: center;
+    }
+    &__list {
+      flex-direction: column;
+      align-items: center;
+    }
+    &__object {
+      padding: 1.5rem 0 0rem 0;
+      &--icon1 {
+        @include setup-bullet-icon-mobile('../../../assets/icon.svg');
+      }
+      &--icon2 {
+        @include setup-bullet-icon-mobile('../../../assets/icon2.svg');
+      }
+      &--icon3 {
+        @include setup-bullet-icon-mobile('../../../assets/icon3.svg');
+      }
     }
   }
 }
