--- a/src/components/pages/main-page/board.scss
+++ b/src/components/pages/main-page/board.scss
@@ -80,3 +80,42 @@
     @include mask();
   }
 }
+
+@media screen and (max-width: 992px) {
+  .board {
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: 25% 25% 25% 25%;
+    &__title {
+      grid-column: 1 / 4;
+      grid-row: 1 / 1;
+    }
+    &__main {
+      grid-column: 1 / 4;
+      grid-row: 2 / 4;
+      &--mask {
+        font-size: 2.5rem;
+      }
+    }
+    &__aux1 {
+      grid-column: 1 / 1;
+      grid-row: 4 / 4;
+      &--mask {
+        font-size: 2rem;
+      }
+    }
+    &__aux2 {
+      grid-column: 2 / 2;
+      grid-row: 4 / 4;
+      &--mask {
+        font-size: 2rem;
+      }
+    }
+    &__aux3 {
+      grid-column: 3 / 3;
+      grid-row: 4 / 4;
+      &--mask {
+        font-size: 2rem;
+      }
+    }
+  }
+}
