--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -10,6 +10,8 @@ $font-light: 100;
 $font-regular: 400;
 $font-title: 3rem;
 $font-size-form: 1rem;
+$font-card-title: 2.5rem;
+$font-card-title-reduced: 2rem;
 
 // BASE COLORS
 $alabaster: #fafafc;
