--- a/src/components/base/cardResult/cardResult.scss
+++ b/src/components/base/cardResult/cardResult.scss
@@ -4,13 +4,14 @@
   display: flex;
   align-items: center;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .card-result {
   background-color: #87a48755;
   cursor: pointer;
   box-sizing: border-box;
-  margin-bottom: 0.4rem;
+  margin-bottom: 0.2rem;
   height: 30rem;
   width: 33%;
   padding: 1.5rem;
@@ -18,7 +19,7 @@
     box-shadow: $shadow;
   }
   &:not(:nth-child(3n + 1)) {
-    margin-left:0.4rem;
+    margin-left:0.2rem;
   }
   &__image-container {
     width: 100%;
@@ -38,8 +39,15 @@
     margin-bottom: 0.5rem;
     font-family: $font-family-text;
     font-weight: $font-weight-default;
+    font-size: 1.2rem;
     line-height: 1.5rem;
     overflow: hidden;
+  }
+  &__title {
+    font-family: $font-source-sans;
+    font-size: $font-card-title;
+    font-weight: $font-light;
+    color: $title-deep-color;
   }
 }
 
@@ -61,9 +69,17 @@
   }
 
   .card-result {
-    width: calc(50% - 0.2rem);
+    width: calc(50% - 0.1rem);
     &:not(:nth-child(3n + 1)) {
       margin-left:0rem;
+    }
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .card-result {
+    &__title {
+      font-size: $font-card-title-reduced;
     }
   }
 }
