--- a/src/components/base/cardResult/cardResult.scss
+++ b/src/components/base/cardResult/cardResult.scss
@@ -37,6 +37,7 @@
     padding-left: 0.1rem;
     margin-bottom: 0.5rem;
     font-family: $font-family-text;
+    font-size: 1rem;
     font-weight: $font-weight-default;
     line-height: 1.5rem;
     overflow: hidden;
