--- a/src/style.scss
+++ b/src/style.scss
@@ -18,7 +18,7 @@ body {
     "main"
     "footer";
   grid-template-columns: auto;
-  grid-template-rows: 70px auto auto;
+  grid-template-rows: 10% auto auto;
 }
 
 .header {
