--- a/src/style.scss
+++ b/src/style.scss
@@ -29,6 +29,7 @@ body {
 
 .main {
   grid-area: main;
+  min-height: 90vh;
   font-size: $font-weight-default;
 }
 
@@ -51,6 +52,19 @@ body {
     font-weight: $font-light;
     color: $title-deep-color;
   }
+}
+
+.separator {
+  padding-top: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  &__icon {
+    @include separator('assets/icon6.svg');
+  };
 }
 
 @media screen and (max-width: 992px) {
