--- a/src/components/pages/plant-page/plant-page.scss
+++ b/src/components/pages/plant-page/plant-page.scss
@@ -1,5 +1,43 @@
+@import '../../../variables';
+
+.plant-title {
+  padding: 20px;
+  width: 80%;
+  margin: 0 auto;
+  &__text {
+    text-align: center;
+    text-transform: capitalize;
+  }
+}
+
+.plant-board {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: right;
+  &__table {
+    width: 40%;
+  }
+  &__imgContainer {
+    width: 60%;
+  }
+  &__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
 .plant-info {
   width: 80%;
   margin: 0 auto;
   text-align: justify;
+  padding-top: 20px;
+  & h2, h3 {
+    padding: 20px;
+    font-family: $font-source-sans;
+    font-size: $font-subtitle;
+    font-weight: $font-light;
+    color: $title-deep-color;
+  }
 }
