--- a/src/components/base/table/table.scss
+++ b/src/components/base/table/table.scss
@@ -5,17 +5,18 @@
     padding: 15px;
     display: flex;
     flex-direction: row;
-    // justify-content: space-between;
+    align-items: center;
     &--dark {
       background-color: $shilo;
     }
-    &--right {
+    &--bright {
       background-color: $watusi;
     }
   }
   &__title {
     font-weight: bold;
     width: 40%;
+    padding-right: 20px;
   }
   &__content {
     &::first-letter{
