--- a/src/components/pages/main-page/board.scss
+++ b/src/components/pages/main-page/board.scss
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     transition: 0.5s;
     &:hover {
       background-color: transparent;
