--- a/src/components/pages/about-page/about-page.scss
+++ b/src/components/pages/about-page/about-page.scss
@@ -36,3 +36,30 @@
     padding-left: 20px;
   }
 }
+
+.card-contact {
+  height: 500px;
+  width: 100%;
+}
+
+@media screen and (max-width: 992px) {
+  .card-dev {
+    padding: 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+    &__photo {
+      background-image:url('../../../assets/author.jpg');
+      background-size: contain;
+      background-repeat: no-repeat;
+      border-radius: 50%;
+      width: 200px;
+      height: 200px;
+    }
+    &__text {
+      padding-left: 20px;
+    }
+  }
+}
