--- a/src/components/pages/about-page/about-page.scss
+++ b/src/components/pages/about-page/about-page.scss
@@ -19,11 +19,11 @@
 }
 
 .card-dev {
-  padding: 20px 0;
-  display: flex;
-  align-items: flex-start;
   width: 80%;
   margin: 0 auto;
+  &__container {
+    padding: 40px 0px;
+  }
   &__photo {
     background-image:url('../../../assets/author.jpg');
     background-size: contain;
@@ -31,15 +31,18 @@
     border-radius: 50%;
     width: 200px;
     height: 200px;
+    float: left;
+    margin-right: 20px;
   }
   &__text {
-    padding-left: 20px;
+    line-height: 2em;
+    text-align: justify;
+    box-sizing: border-box;
   }
 }
 
-.card-contact {
-  height: 500px;
-  width: 100%;
+separator {
+  width: auto;
 }
 
 @media screen and (max-width: 992px) {
