--- a/src/components/base/input/input.scss
+++ b/src/components/base/input/input.scss
@@ -1,5 +1,26 @@
 @import '../../../variables';
 
+@mixin input-settings() {
+	width: 100%;
+  height: 2.5rem;
+  border: none;
+  background-color: transparent;
+  border-bottom: 0.15rem solid $border-bright-color;
+  font-size: $font-weight-default;
+  box-sizing: border-box;
+  font-family: $font-input;
+  font-size: $font-size-form;
+  &::placeholder {
+    font-size: $font-size-form;
+  }
+  &:focus {
+    outline: none;
+    box-shadow: $shadow;
+    transition: 0.5s;
+    border-bottom: 0.15rem solid $border-focus-color;
+  }
+}
+
 .input-search {
   position: relative;
   &__icon {
@@ -11,25 +32,11 @@
     left: 0.5rem;
     filter: invert(28%) sepia(4%) saturate(2378%) hue-rotate(75deg) brightness(96%) contrast(94%);
   }
-  &__field{
-    width: 100%;
-    height: 2.5rem;
-    border: none;
-    background-color: transparent;
-    border-bottom: 0.15rem solid $border-bright-color;
+  &__field {
+    @include input-settings();
+  }
+  &__field-icon {
+    @include input-settings();
     padding-left: 3rem;
-    font-size: $font-weight-default;
-    box-sizing: border-box;
-    font-family: $font-input;
-    font-size: $font-size-form;
-    &::placeholder {
-      font-size: $font-size-form;
-    }
-    &:focus {
-      outline: none;
-      box-shadow: $shadow;
-      transition: 0.5s;
-      border-bottom: 0.15rem solid $border-focus-color;
-    }
   }
 }
