Update input and login form.

--- a/src/components/base/button/button.scss
+++ b/src/components/base/button/button.scss
@@ -4,7 +4,7 @@
   font-family: $font-button;
   font-weight: $font-weight-default;
   font-size: medium;
-  display: inline;
+  display: block;
   cursor: pointer;
   width: 100%;
   height: 2.5rem;
